initial commit and implementation of cache with tests

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -55,8 +55,11 @@ logger.root=ERROR
 logger.play=INFO
 
 # Logger provided to your application:
-logger.application=DEBUG
+logger.application=INFO
 
 # To enable using ebean ORM to hit the DB (mysql in our case).
 play.evolutions.enabled=true
 play.evolutions.autoApply=true
+play.modules.enabled += "factory.CacheModule"
+
+
