adds configuration based redis setup

--- a/conf/local.conf
+++ b/conf/local.conf
@@ -63,7 +63,5 @@ play.evolutions.autoApply=true
 play.modules.enabled += "factory.CacheModule"
 
 redis.host="redis://127.0.0.1:6379"
-redis.username=pocketpills_redis_user
-redis.password=pocketpills
-
-
+redis.username=""
+redis.password=""
